<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/start_pre_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_start_pre_download"/>

    <Button
        android:id="@+id/stop_pre_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_stop_pre_download"/>

    <Button
        android:id="@+id/play_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_play_video"/>

</LinearLayout>